# integer_prog

./: .gitignore  CMakeLists.txt  README.mc  gmon.out  save_checker.txt
solutions/: solution.sol  solution_compacte_uniform_10.sol  solution_compacte_uniform_12.sol  solution_compacte_uniform_13.sol  solution_compacte_uniform_14.sol  solution_compacte_uniform_15.sol  solution_compacte_uniform_16.sol  solution_compacte_uniform_17.sol  solution_compacte_uniform_18.sol  solution_compacte_uniform_19.sol  solution_compacte_uniform_20.sol  solution_compacte_uniform_21.sol  solution_compacte_uniform_22.sol  solution_compacte_uniform_23.sol  solution_compacte_uniform_24.sol  solution_compacte_uniform_25.sol  solution_compacte_uniform_28.sol  solution_compacte_uniform_29.sol  solution_compacte_uniform_30.sol  solution_compacte_uniform_32.sol  solution_compacte_uniform_33.sol  solution_compacte_uniform_34.sol  solution_compacte_uniform_35.sol  solution_compacte_uniform_36.sol  solution_compacte_uniform_37.sol  solution_compacte_uniform_38.sol  solution_compacte_uniform_39.sol  solution_compacte_uniform_4.sol  solution_compacte_uniform_40.sol  solution_compacte_uniform_41.sol  solution_compacte_uniform_42.sol  solution_compacte_uniform_43.sol  solution_compacte_uniform_44.sol  solution_compacte_uniform_45.sol  solution_compacte_uniform_46.sol  solution_compacte_uniform_47.sol  solution_compacte_uniform_48.sol  solution_compacte_uniform_49.sol  solution_compacte_uniform_5.sol  solution_compacte_uniform_50.sol  (+5 more)
src/: fonction_tri.cpp  glouton_col.cpp  glouton_col.hpp  master_and_pricing.cpp  master_and_pricing.hpp  modele_compact.cpp  operators.cpp  operators.hpp  solver.cpp
